--- a/client/app/form/form.html
+++ b/client/app/form/form.html
@@ -3,8 +3,9 @@
 </div>
 
 <form name="form">
-    <h3 class="title">Ninja Information</h3>
+    <h3 class="title">Ninja (Participant) Information</h3>
     <p>Note that this event is available to ninjas aged 7 to 17 and all ninjas under the age of 12 must be accompanied by an adult at all times</p>
+    </br>
     <div ng-repeat="ninja in vm.applicant.ninjas">
         <div class="columns">
             <div class="column is-3 control">
@@ -41,7 +42,7 @@
             <i class="fa fa-plus"></i>&nbsp;&nbsp;Add Another Ninja
         </button>
     </p>
-    <h3 class="title">Actvities<h3>
+    <h3 class="title">Actvities</h3>
     <p class="content">We run a range of activities for the ninjas, what activities would they be interested in? (Tick all that apply)</p>
     <p class="control">
         <div ng-repeat="activity in vm.text.activities">
@@ -52,6 +53,8 @@
         </div>
     </p>
     <h3 class="title">Parent/Guardian Information</h3>
+    <p>If a Parent/Guardian is attending the event (required if a ninja is 12 years or under), please put the information for the Parent/Guardian who will be attending the event.</p>
+    </br>
     <div class="columns is-multiline">
         <div class="column is-3 control">
             <label class="label">First Name</label>
@@ -118,70 +121,3 @@
         <button type="submit" class="button is-primary" ng-click="vm.submit()">Submit Registration</button>
     </p>
 </form>
-
-    <!--<div class="row">
-
-            <h4>Parent/Guardian Information:</h4>
-            <div class="form-inline">
-                <div class="form-group">
-                    <label for="parentFirstName" class="sr-only">Parent/Guardian First Name</label>
-                    <input type="text" class="form-control" id="parentFirstName" placeholder="Parent First Name" ng-model="vm.applicant.parent.firstName"
-                           ng-required="true" required/>
-                </div>
-                <div class="form-group">
-                    <label for="parentLastName" class="sr-only">Parent/Guardian Last Name</label>
-                    <input type="text" class="form-control" id="parentLastName" placeholder="Parent Last Name" ng-model="vm.applicant.parent.lastName"
-                           ng-required="true" required/>
-                </div>
-                <div class="form-group">
-                    <label for="parentEmail" class="sr-only">Parent Email</label>
-                    <input type="email" class="form-control" id="parentEmail" placeholder="Parent Email" ng-model="vm.applicant.parent.email"
-                           ng-required="true" required/>
-                </div>
-                <div class="form-group">
-                    <label for="parentPhone" class="sr-only">Parent Phone Number</label>
-                    <input type="text" class="form-control" id="parentPhone" placeholder="Parent Phone Number" ng-model="vm.applicant.parent.phone"
-                           ng-required="true" required/>
-                </div>
-            </div>
-            <div ng-show="vm.isBw">
-                <h4>Bankwest Contact Name:</h4>
-                <div class="form-inline">
-                    <div class="form-group">
-                        <label for="bwFirstName" class="sr-only">Bankwest Contact First Name</label>
-                        <input type="text" class="form-noncontrol" id="bwFirstName" placeholder="Contact First Name" ng-model="vm.applicant.bwContact.firstName" />
-                    </div>
-                    <div class="form-group">
-                        <label for="bwLastName" class="sr-only">Bankwest Contact Last Name</label>
-                        <input type="text" class="form-noncontrol" id="bwLastName" placeholder="Contact Last Name" ng-model="vm.applicant.bwContact.lastName" />
-                    </div>
-                </div>
-            </div>
-            <br/>
-
-            <h4>Photo Release Waiver:</h4>
-            <p>
-                By participating in this CoderDojo Event, you understand that photos/video may be taken of your child and/or yourself by Bankwest
-                and/or CoderDojo WA and that these photos/videos may be used in social or other media to promote Bankwest's support of CoderDojo and the
-                CoderDojo movement. By attending, you agree to the use of your and/or your child's image for the purposes of promoting CoderDojo/Bankwest.
-            </p>
-            <div class="checkbox">
-                <label for="photoWaiver">
-                    <input type="checkbox" id="photoWaiver" ng-model="vm.applicant.photoPermission" required/>By checking this box, you understand and give
-                    permission for CoderDojo WA and Bankwest to use photomedia of my child at the Dojo event to promote the CoderDojo movement.
-                </label>
-            </div>
-            <br/>
-
-            <div class="form-group">
-                <label for="comments" class="control-label">Any Additional Comments?</label>
-                <textarea rows="2" columns="50" id="comments" ng-model="vm.applicant.comments" class="form-control"></textarea>
-            </div>
-
-
-            <div class="form-group">
-                <button type="submit" class="btn btn-bw">Submit Registration</button>
-            </div>
-        </form>
-    </div>
-</div>-->
