--- a/client/app/passcode/passcode.html
+++ b/client/app/passcode/passcode.html
@@ -1,22 +1,22 @@
 <!-- Girls Dojo Passcode page -->
-<div ng-if="vm.isGirlsDojo" class="container">
-    <div class="row main-img">
-        <div class="col-md-2 col-md-offset-2 text">
-            <h2>{{vm.eventDate}}</h2>
+<div ng-if="vm.isGirlsDojo" class="container passcode">
+    <div class="columns main-img">
+        <div class="column is-2 is-offset-2">
+            <h2 class="title is-3">{{vm.eventDate}}</h2>
         </div>
-        <div class="col-md-4 text-center">
-            <i class="fa fa-female large"></i>&nbsp;&nbsp;&nbsp;
+        <div class="column is-2">
+            <i class="fa fa-female large"></i>
+        </div>
+        <div class="column is-2">
             <span><img src="images/coderdojo.png"/></span>
         </div>
-        <div class="col-md-4 text time">
-            <h2>10am - 3pm</h2>
+        <div class="column is-2">
+            <h2 class="title is-3">10am - 3pm</h2>
         </div>
+        <div class="column is-2"></div>
     </div>
-    <div class="row">
-        <h3 class="col-md-6 col-md-offset-3 text-center">Girls CoderDojo Event</h3>
-    </div>
-    <div class="row">
-        <h5 class="col-md-6 col-md-offset-3 text-center closer">Bankwest Place 300 Murray Street, Perth WA</h5>
+    <div>
+        <h3 class="subtitle is-3">Bankwest Place 300 Murray Street, Perth WA</h3>
     </div>
     <br/>
 
@@ -37,7 +37,7 @@
 
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
-            <form ng-submit="vm.submitPasscode()">
+            <form name="form" ng-submit="vm.submitPasscode()">
                 <div class="form-group">
                     <label for="code" class="sr-only">Registration Code</label>
                     <input type="text" class="form-control" id="code" ng-model="vm.passcode" name="passcode" required ng-class="{'is-danger': form.passcode.$error.invalid}" placeholder="Registration Code">
